k8s/product-service/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: product-service
  labels:
    name: product-service
    environment: production
    managed-by: argocd
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: v1.24
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
